Milestones flex-wrap fix

--- a/Styles/milestones.css
+++ b/Styles/milestones.css
@@ -1,6 +1,5 @@
 .milestones {
     display: flex;
-    height: 521px;
     flex-direction: column;
     align-items: center;
    padding: 70px 70px;
@@ -18,6 +17,7 @@
     display: flex;
     padding-right: 25px;
     align-content: stretch;
+    margin-bottom: 25px;
   }
   
   .right-column-milestone {
